Remove deprecated constructors from parameters